turned off autocomplete for forms

--- a/templates/mytrips.html
+++ b/templates/mytrips.html
@@ -14,7 +14,7 @@
           <h4 class="modal-title">Add City Board</h4>
         </div>
         <div class="modal-body">
-          <form class="modal-content animate" action="/{{ user.user_id }}/add-trip" method="POST">
+          <form autocomplete="off" class="modal-content animate" action="/{{ user.user_id }}/add-trip" method="POST">
             <input type="text" placeholder="Enter City" name="city">
             <input type="text" placeholder="Name of Trip" name="name">
         </div>
