--- a/templates/signup.html
+++ b/templates/signup.html
@@ -14,7 +14,7 @@
       </div>
 
       <div class="card-body">
-        <form class="form-signin" action="/signup" method="POST">
+        <form autocomplete="off" class="form-signin" action="/signup" method="POST">
 
           <div class="input-group form-group">
             <div class="input-group-prepend">
