--- a/templates/login.html
+++ b/templates/login.html
@@ -13,7 +13,7 @@
         <h3>Sign In</h3>
       </div>
       <div class="card-body">
-        <form class="form-signin" action="/login" method="POST">
+        <form autocomplete="off" class="form-signin" action="/login" method="POST">
           <div class="input-group form-group">
             <div class="input-group-prepend">
               <span class="input-group-text"><i class="fas fa-user"></i></span>
