swapped redheart with gray heart

--- a/templates/results.html
+++ b/templates/results.html
@@ -25,8 +25,8 @@
         id="form-{{photo.img_id}}" 
         action="/add-photo"
         method="POST">
-        <input type="image" name="submit" src="../static/imgs/love.png" border="0" alt="Submit" class="love" /> 
-        <img src="../static/imgs/love.png" border="0" class="grayheart">
+        <input type="image" name="submit" src="../static/imgs/love.png" border="0" alt="Submit" class="grayheart" /> 
+        <img src="../static/imgs/love.png" border="0" class="love">
       </form>
 
       {% elif photo %}
