--- a/static/css/style.css
+++ b/static/css/style.css
@@ -158,7 +158,7 @@
     line-height: .5;
     margin: 0 auto;
     color: rgba(0,0,0,.5);
-    border-color: #f8f9fa;
+    border-color: rgba(0,0,0,.5);
   }
 
   .overlay{
